--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,4 +2,9 @@
 
 members = [
     "sails-db",
+    "sails-bin"
 ]
+
+[patch.crates-io]
+rocket = { git = "https://github.com/SergioBenitez/Rocket" }
+rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
