--- a/sails-db/Cargo.toml
+++ b/sails-db/Cargo.toml
@@ -10,12 +10,15 @@ edition = "2018"
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
+# Testing only, however, benchmark used it as well, and we have to use it in test_utils which cannot be gated
 diesel_migrations = "^1.4"
 # Verify users in a secure manner
 bcrypt = "^0.8"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 thiserror = "^1"
 phonenumber = "^0.3"
+check-if-email-exists = "^0.8"
+rocket = "0.5.0-dev"
 
 [dev-dependencies]
 criterion = "^0.3"
