--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -17,4 +17,4 @@ sails-db = { path = "../sails-db" }
 [dependencies.rocket_contrib]
 version = "0.5.0-dev"
 default_features = false
-features = ["tera_templates", "diesel_sqlite_pool", "serve"]
+features = ["tera_templates", "diesel_sqlite_pool", "serve", "helmet"]
