--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -13,8 +13,10 @@ serde_json = "^1"
 diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
 diesel_migrations = "^1.4"
 sails-db = { path = "../sails-db" }
+thiserror = "^1"
 
 [dependencies.rocket_contrib]
 version = "0.5.0-dev"
+git = "https://github.com/SergioBenitez/Rocket"
 default_features = false
 features = ["tera_templates", "diesel_sqlite_pool", "serve", "helmet"]
