--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,18 @@
 
 members = [
     "sails-db",
-    "sails-bin"
+    "sails-bin",
+    "askama_rocket",
+    "askama_shared"
 ]
 
 [patch.crates-io]
 rocket = { git = "https://github.com/SergioBenitez/Rocket" }
 rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
+# We use askama and askama_rocket in sails-bin
+# And askama_rocket uses askama back in the scene
+# And askama uses askama_shared
+# By transistively overriding it, it works
+# This workaround should be moved once the PR is merged
+askama_rocket = { path = "./askama_rocket" }
+askama_shared = { path = "./askama_shared" }
