--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,17 +3,13 @@
 members = [
     "sails-db",
     "sails-bin",
-    "askama_rocket",
-    "askama_shared"
 ]
 
 [patch.crates-io]
 rocket = { git = "https://github.com/SergioBenitez/Rocket" }
 rocket_contrib = { git = "https://github.com/SergioBenitez/Rocket" }
-# We use askama and askama_rocket in sails-bin
-# And askama_rocket uses askama back in the scene
-# And askama uses askama_shared
-# By transistively overriding it, it works
-# This workaround should be moved once the PR is merged
-askama_rocket = { path = "./askama_rocket" }
-askama_shared = { path = "./askama_shared" }
+# This workaround should be removed once the PR is merged
+# askama_rocket = { path = "../askama/askama_rocket" }
+# askama = { path = "../askama/askama" }
+askama = { git = "https://github.com/flibrary/askama", branch = "main" }
+askama_rocket = { git = "https://github.com/flibrary/askama", branch = "main" }
