--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -25,4 +25,4 @@ askama_rocket = "^0.10"
 version = "0.5.0-dev"
 git = "https://github.com/SergioBenitez/Rocket"
 default_features = false
-features = ["diesel_sqlite_pool", "serve", "helmet"]
+features = ["diesel_sqlite_pool", "helmet"]
