--- a/sails-db/Cargo.toml
+++ b/sails-db/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
-diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
+diesel = { version = "^1.4", features = ["sqlite", "r2d2", "chrono"] }
 # Testing only, however, benchmark used it as well, and we have to use it in test_utils which cannot be gated
 diesel_migrations = "^1.4"
 # Verify users in a secure manner
@@ -19,6 +19,7 @@ thiserror = "^1"
 phonenumber = "^0.3"
 check-if-email-exists = "^0.8"
 rocket = "0.5.0-dev"
+chrono = { version = "^0.4", features = ["serde"] }
 
 [dev-dependencies]
 criterion = "^0.3"
