--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+check-if-email-exists = "0.8"
 rocket = { version = "0.5.0-dev", features = ["secrets"] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
