--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -22,8 +22,7 @@ structopt = "^0.3"
 askama = { version = "^0.10", features = ["with-rocket", "mime", "mime_guess"]}
 askama_rocket = "^0.10"
 
-[dependencies.rocket_contrib]
-version = "0.5.0-dev"
-git = "https://github.com/SergioBenitez/Rocket"
-default_features = false
+[dependencies.rocket_sync_db_pools]
+version = "0.1.0-dev"
+default-features = false
 features = ["diesel_sqlite_pool"]
