enable markdown in description

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,8 @@ members = [
 ]
 
 [patch.crates-io]
-rocket = { git = "https://github.com/SergioBenitez/Rocket" }
-rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket" }
+rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "e45e164" }
+rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "e45e164" }
 # This workaround should be removed once the PR is merged
 # askama_rocket = { path = "../askama/askama_rocket" }
 # askama = { path = "../askama/askama" }
