--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -14,6 +14,7 @@ rocket = { version = "0.5.0-dev", features = ["secrets"] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
+uuid = { version = "0.8", features = ["serde", "v4"] }
 diesel_migrations = "^1.4"
 sails-db = { path = "../sails-db" }
 thiserror = "^1"
