--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -8,9 +8,9 @@ edition = "2018"
 
 [dependencies]
 once_cell = "^1.7"
-comrak = "0.10"
+comrak = "^0.10"
 check-if-email-exists = "0.8"
-rocket = { version = "0.5.0-dev", features = ["secrets"] }
+rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
@@ -26,6 +26,6 @@ askama = { version = "^0.10", features = ["with-rocket", "mime", "mime_guess"]}
 askama_rocket = "^0.10"
 
 [dependencies.rocket_sync_db_pools]
-version = "0.1.0-dev"
+version = "0.1.0-rc.1"
 default-features = false
 features = ["diesel_sqlite_pool"]
