--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -9,7 +9,6 @@ edition = "2018"
 [dependencies]
 once_cell = "^1.7"
 comrak = "^0.10"
-check-if-email-exists = "0.8"
 rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
@@ -17,9 +16,10 @@ diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
 uuid = { version = "0.8", features = ["serde", "v4"] }
 diesel_migrations = "^1.4"
 sails-db = { path = "../sails-db" }
-thiserror = "^1"
 rust-embed="^5.9"
 structopt = "^0.3"
+lettre = "0.10.0-rc.3"
+reqwest = { version = "0.11", features = ["json"]}
 # We need askama as the backend template engine because it is type safe, however, it doesn't work with rocket 0.5 yet.
 # See also: https://github.com/djc/askama/pull/412
 askama = { version = "^0.10", features = ["with-rocket", "mime", "mime_guess"]}
