--- a/sails-db/Cargo.toml
+++ b/sails-db/Cargo.toml
@@ -19,7 +19,7 @@ bcrypt = "^0.8"
 uuid = { version = "0.8", features = ["serde", "v4"] }
 thiserror = "^1"
 phonenumber = "^0.3"
-check-if-email-exists = "^0.8"
+lettre = "0.10.0-rc.3"
 rocket = "0.5.0-rc.1"
 chrono = { version = "^0.4", features = ["serde"] }
 
