email verification system

--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -18,8 +18,11 @@ diesel_migrations = "^1.4"
 sails-db = { path = "../sails-db" }
 rust-embed="^5.9"
 structopt = "^0.3"
-lettre = "0.10.0-rc.3"
+base64 = "^0.13"
+anyhow = "^1"
+lettre = { version = "0.10.0-rc.3", features = ["tokio1-rustls-tls", "builder", "smtp-transport", "r2d2", "tokio1"] }
 reqwest = { version = "0.11", features = ["json"]}
+chacha20poly1305 = "^0.8"
 # We need askama as the backend template engine because it is type safe, however, it doesn't work with rocket 0.5 yet.
 # See also: https://github.com/djc/askama/pull/412
 askama = { version = "^0.10", features = ["with-rocket", "mime", "mime_guess"]}
