--- a/diesel.toml
+++ b/diesel.toml
@@ -3,4 +3,4 @@
 
 [print_schema]
 file = "./sails-db/src/schema.rs"
-patch_file = "./sails-db/src/schema.patch"
+# patch_file = "./sails-db/src/schema.patch"
