--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -8,7 +8,8 @@ edition = "2018"
 
 [dependencies]
 once_cell = "^1.7"
-comrak = "^0.10"
+ammonia = "^3"
+pulldown-cmark = "^0.8"
 rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
