--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,6 @@ members = [
 ]
 
 [patch.crates-io]
-# rocket = { git = "https://github.com/SergioBenitez/Rocket", rev = "e45e164" }
-# rocket_sync_db_pools = { git = "https://github.com/SergioBenitez/Rocket", rev = "e45e164" }
-# This workaround should be removed once the PR is merged
-# askama_rocket = { path = "../askama/askama_rocket" }
-# askama = { path = "../askama/askama" }
-askama = { git = "https://github.com/flibrary/askama", branch = "main" }
-askama_rocket = { git = "https://github.com/flibrary/askama", branch = "main" }
+# This workaround should be removed once the all the crates are updated
+askama = { git = "https://github.com/djc/askama", branch = "main" }
+askama_rocket = { git = "https://github.com/djc/askama", branch = "main" }
