--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2018"
 [dependencies]
 once_cell = "^1.7"
 ammonia = "^3"
-pulldown-cmark = "^0.8"
+# pulldown-cmark = "^0.8"
 rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
@@ -27,6 +27,7 @@ chacha20poly1305 = "^0.8"
 # We need askama as the backend template engine because it is type safe.
 askama = { version = "^0.10", features = ["with-rocket", "mime", "mime_guess"]}
 askama_rocket = "^0.11.0-rc.1"
+sha2 = "0.9"
 
 [dependencies.rocket_sync_db_pools]
 version = "0.1.0-rc.1"
