--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -25,8 +25,8 @@ lettre = { version = "0.10.0-rc.3", features = ["tokio1-rustls-tls", "builder", 
 reqwest = { version = "0.11", features = ["json"]}
 chacha20poly1305 = "^0.8"
 # We need askama as the backend template engine because it is type safe.
-askama = { version = "^0.10", features = ["with-rocket", "mime", "mime_guess"]}
-askama_rocket = "^0.11.0-rc.1"
+askama = { version = "0.11.0-beta.1", features = ["with-rocket", "mime", "mime_guess"]}
+askama_rocket = "^0.11.0-rc.2"
 sha2 = "0.9"
 
 [dependencies.rocket_sync_db_pools]
