--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -18,6 +18,7 @@ uuid = { version = "0.8", features = ["serde", "v4"] }
 diesel_migrations = "^1.4"
 sails-db = { path = "../sails-db" }
 rust-embed="^6.0"
+select = "0.6.0-alpha.1"
 structopt = "^0.3"
 base64 = "^0.13"
 anyhow = "^1"
