--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ members = [
 
 [patch.crates-io]
 # This workaround should be removed once the all the crates are updated
-askama = { git = "https://github.com/djc/askama", branch = "main" }
-askama_rocket = { git = "https://github.com/djc/askama", branch = "main" }
+askama = { git = "https://github.com/djc/askama", rev = "b93ce466cee51f879edd346d05c0faa4845ee1cc" }
+askama_rocket = { git = "https://github.com/djc/askama", rev = "b93ce466cee51f879edd346d05c0faa4845ee1cc" }
