--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -114,6 +114,7 @@ jobs:
           command: clippy
 
   repo_dispatch:
+    if: github.event_name == 'push'
     name: Create repository dispatch
     runs-on: ubuntu-latest
     needs:
