--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,7 @@ members = [
 [patch.crates-io]
 # This workaround should be removed once the all the crates are updated
 askama = { git = "https://github.com/djc/askama", rev = "b93ce466cee51f879edd346d05c0faa4845ee1cc" }
+askama_shared = { git = "https://github.com/djc/askama", rev = "b93ce466cee51f879edd346d05c0faa4845ee1cc" }
+askama_derive = { git = "https://github.com/djc/askama", rev = "b93ce466cee51f879edd346d05c0faa4845ee1cc" }
+askama_escape = { git = "https://github.com/djc/askama", rev = "b93ce466cee51f879edd346d05c0faa4845ee1cc" }
 askama_rocket = { git = "https://github.com/djc/askama", rev = "b93ce466cee51f879edd346d05c0faa4845ee1cc" }
