--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -17,7 +17,7 @@ jobs:
           fetch-depth: 0
       - uses: cachix/install-nix-action@v12
         with:
-          install_url: https://github.com/numtide/nix-flakes-installer/releases/download/nix-2.4pre20210126_f15f0b8/install
+          install_url: https://github.com/numtide/nix-unstable-installer/releases/download/nix-2.6.0pre20220106_f71d846/install
           # Configure Nix to enable flakes
           extra_nix_config: |
             experimental-features = nix-command flakes
@@ -29,7 +29,9 @@ jobs:
           authToken: '${{ secrets.CACHIX_AUTH_TOKEN }}'
 
       # Run the general flake checks
-      - run: nix flake check -vL
+      - run: |
+          nix flake update
+          nix flake check -vL
 
   check:
     name: Build all feature permutations
