--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+maplit = "^1"
 once_cell = "^1.7"
 ammonia = "^3"
 # pulldown-cmark = "^0.8"
