--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+log = "^0.4"
+teloxide = { version = "^0.7", features = ["auto-send", "macros"] }
 bytes = "^1"
 maplit = "^1"
 once_cell = "^1.7"
@@ -36,6 +38,7 @@ chacha20poly1305 = "^0.9"
 # We need askama as the backend template engine because it is type safe.
 askama = { version = "=0.11.0-beta.1", features = ["with-rocket", "mime", "mime_guess"]}
 askama_rocket = "=0.11.0-rc.2"
+tokio = { version = "^1" }
 
 [dependencies.rocket_sync_db_pools]
 version = "0.1.0-rc.1"
