--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+lopdf = "^0.27"
 log = "^0.4"
 teloxide = { version = "^0.7", features = ["auto-send", "macros"] }
 bytes = "^1"
