--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -7,7 +7,9 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-lopdf = "^0.27"
+image = "^0.23"
+qrcode = "^0.12"
+lopdf = { version = "^0.27", features = ["embed_image"] }
 log = "^0.4"
 teloxide = { version = "^0.7", features = ["auto-send", "macros"] }
 bytes = "^1"
