--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -35,6 +35,7 @@ urlencoding = "^2"
 rsa = {version = "^0.5", features = ["alloc"]}
 num-bigint = {version = "^0.4", features = ["serde"]}
 sha2 = "^0.10"
+sha1 = "^0.10"
 rand = {version = "^0.8", features = ["std_rng"]}
 base64 = "^0.13"
 chrono = "^0.4"
