add PayPal support

--- a/sails-db/Cargo.toml
+++ b/sails-db/Cargo.toml
@@ -27,6 +27,7 @@ phonenumber = "^0.3"
 lettre = "0.10.0-rc.3"
 rocket = "0.5.0-rc.1"
 chrono = { version = "^0.4", features = ["serde"] }
+paypal-rs = { version = "0.2.0-alpha.7" }
 
 [dev-dependencies]
 criterion = "^0.3"
