--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+paypal-rs = { version = "0.2.0-alpha.7" }
+
 gettext-macros = "^0.6"
 gettext-utils = "0.1"
 gettext = "^0.4"
@@ -21,7 +23,7 @@ maplit = "^1"
 once_cell = "^1.7"
 ammonia = "^3"
 # pulldown-cmark = "^0.8"
-rocket = { version = "0.5.0-rc.1", features = ["secrets"] }
+rocket = { version = "0.5.0-rc.1", features = ["secrets", "json"] }
 serde = { version = "^1", features = ["derive"] }
 serde_json = "^1"
 diesel = { version = "^1.4", features = ["sqlite", "r2d2"] }
