--- a/sails-bin/Cargo.toml
+++ b/sails-bin/Cargo.toml
@@ -18,7 +18,7 @@ gettext = "^0.4"
 
 image = "^0.23"
 qrcode = "^0.12"
-lopdf = { version = "^0.28", features = ["embed_image"] }
+lopdf = { version = "^0.27", features = ["embed_image"] }
 log = "^0.4"
 teloxide = { version = "^0.10", features = ["auto-send", "macros"] }
 bytes = "^1"
@@ -53,7 +53,7 @@ chacha20poly1305 = "^0.9"
 askama = { version = "^0.11", features = ["with-rocket", "mime", "mime_guess"]}
 askama_rocket = "^0.11"
 tokio-stream = "^0.1"
-tokio = { version = "^1" }
+tokio = { version = "^1", features = ["time"] }
 
 [dependencies.rocket_sync_db_pools]
 version = "0.1.0-rc.1"
